--- a/styles.css
+++ b/styles.css
@@ -1,574 +1,180 @@
-/* Fonte */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
-/* Variações CSS */
-:root{
-  --header-height: 3rem;
-  
-  /* Cores */
-  --title-color: #0B0A0A;
-  --text-color: #453635;
-  --text-color-light: #7C8465;
-  --container-color: #FAFAFA;
-  --container-color-alt: #D8DBD0;
-  --body-color: #F2F3EF;
-
-  /* Tamanho e Tipografia */
-  --body-font: 'Poppins', sans-serif;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .875rem;
-  --smaller-font-size: .813rem;
-
-  /* Peso da Fonte */
-  --font-medium: 500;
-  --font-semi-bold: 600;
-
-  /* Margens */
-  --mb-1: .5rem;
-  --mb-2: 1rem;
-  --mb-3: 1.5rem;
-
-  /* Z Index */
-  --z-tooltip: 10;
-  --z-fixed: 100;
-}
-
-/* Base */
-*,::before,::after{
+* {
+  /* Resetando as margens e preenchimentos do navegador */
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-html{
-  scroll-behavior: smooth;
+body * {
+  /* Fonte da página */
+  font-family: 'Montserrat', sans-serif;
+  line-height: 160%;
 }
 
-/* Variações tema dark */
-body.dark-theme{
-  --title-color: #D8DBD0;
-  --text-color: #F2F3EF;
-  --container-color: #212121;
-  --container-color-alt: #181616;
-  --body-color: #2B2B2B;
+body {
+  /*background*/
+  background-image: url('./assets/bg.jpg');
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-color: #121214;
 }
 
-/* Botão light/dark */
-.change-theme{
-  position: absolute;
-  right: 0;
-  top: 2.2rem;
+header {
+  margin-top: 32px;
+  height: calc(120px + 32px);
+}
+
+header div {
+  /* Especificações da caixa do topo onde fica a foto do usuário */
+  width: 120px;
+  height: 120px;
+  margin: auto;
   display: flex;
-  color: var(--text-color);
-  font-size: 1.2rem;
-  cursor: pointer;
+  background-image: linear-gradient(90deg, #c91842 0%, #5cc2e2 100%);
+  border-radius: 50%;
+  padding: 4px;
+  transition: transform 0.5s;
+  animation: fromTop 1s backwards;
+  animation-delay: 0.4;
 }
 
-.change-theme:hover{
-  color: var(--title-color);
+header div:hover {
+  transform: scale(1.2);
 }
 
-/* Variações de escala da fonte */
-body.scale-cv{
-  --h1-font-size: .938rem;
-  --h2-font-size: .938rem;
-  --h3-font-size: .875rem;
-  --normal-font-size: .813rem;
-  --small-font-size: .75rem;
-  --smaller-font-size: .688rem;
+header div img {
+  width: 100%;
+  border-radius: 50%;
 }
 
-/* Botão pdf download */
-.generate-pdf{
-  display: inline-block;
-  position: absolute;
-  top: 2.2rem;
-  left: 0;
-  font-size: 1.2rem;
-  color: var(--text-color);
-  cursor: pointer;
+main {
+  /* tamanho das caixas */
+  max-width: 800px;
+  width: 90%;
+  gap: 24px;
+  display: grid;
+  margin: 32px auto;
 }
 
-.generate-pdf:hover{
-  color: var(--title-color);
+main section {
+  animation: grow 0.6s backwards;
 }
 
-/* Tamanho e download/impressão do CV */
-.scale-cv .change-theme,
-.scale-cv .generate-pdf{
-  display: none;
+div h1 {
+  text-align: center;
+  padding-bottom: 1rem;
 }
 
-.scale-cv .bd-container{
-  max-width: 595px;
+
+
+section {
+  color: white;
+  border-radius: 10px;
+  padding-top: 4px;
+  background-image: linear-gradient(90deg, #c91842 0%, #5cc2e2 100%);
 }
 
-.scale-cv .section{
-  padding: .50rem 0 .80rem;
-}
-
-.scale-cv .section-title{
-  margin-bottom: .75rem;
-}
-
-.scale-cv .resume__left,
-.scale-cv .resume__right{
-  padding: 0 1rem;
-}
-
-.scale-cv .home__img{
-  width: 90px;
-  height: 90px;
-}
-
-.scale-cv .home__container{
-  gap: 1.5rem;
-}
-
-.scale-cv .home__data{
-  gap: .25rem;
-}
-
-.scale-cv .home__address,
-.scale-cv .social__container{
-  gap: .75rem;
-}
-
-.scale-cv .home__icon,
-.scale-cv .social__icon,
-.scale-cv .interests__icon{
-  font-size: 1rem;
-}
-
-.scale-cv .education__container,
-.scale-cv .experience__container,
-.scale-cv .certificate__container{
-  gap: 1rem;
-}
-
-.scale-cv .education__time,
-.scale-cv .experience__time{
-  padding-right: .5rem;
-}
-
-.scale-cv .education__rounder,
-.scale-cv .experience__rounder{
-  width: 11px;
-  height: 11px;
-  margin-top: .22rem;
-}
-
-.scale-cv .education__line,
-.scale-cv .experience__line{
-  width: 1px;
-  height: 110%;
-  transform: translate(5px, 0);
-}
-
-.scale-cv .education__data,
-.scale-cv .experience__data{
-  gap: .25rem;
-}
-
-.scale-cv .skills__name{
-  margin-bottom: var(--mb-1);
-}
-
-.scale-cv .interests__container{
-  column-gap: 2.5rem;
-}
-
-body{
-  margin: 0 0 var(--header-height) 0;
-  padding: 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  background-color: var(--body-color);
-  color: var(--text-color);
-}
-
-h1, h2, h3, ul, p{
-  margin: 0;
-}
-
-h1, h2, h3{
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-}
-
-ul{
-  padding: 0;
+section ul {
+  flex-wrap: wrap;
+  display: flex;
   list-style: none;
+  gap: 16px;
+  margin-top: 8px;
 }
 
-a{
-  text-decoration: none;
+section div {
+  background-color: #262629;
+  padding: 32px;
+  padding-top: 24px;
+  border-radius: 8px;
 }
 
-img{
-  max-width: 100%;
-  height: auto;
+section p {
+  letter-spacing: -0.18px;
+  color: #c1c1c1;
+  padding: 0.5rem;
 }
 
-/* CSS */
-.section{
-  padding: 1.5rem 0;
+section ul li {
+  transition: transform 0.5s;
 }
 
-.section-title{
-  font-size: var(--h2-font-size);
-  color: var(--title-color);
-  font-weight: var(--font-semi-bold);
-  text-transform: uppercase;
-  letter-spacing: .35rem;
-  text-align: center;
-  margin-bottom: var(--mb-3);
+section ul li:hover {
+  transform: scale(1.1);
 }
 
-/* Layout */
-.bd-container{
-  max-width: 968px;
-  width: calc(100% - 3rem);
-  margin-left: var(--mb-3);
-  margin-right: var(--mb-3);
+.film-list img {
+  width: 100px;
+  height: 150px;
+  border-radius: 8px;
+  border: 1px solid #555555;
 }
 
-.bd-grid{
-  display: grid;
-  gap: 1.5rem;
+.formations div ul li, .languages div ul li {
+  transition: none;
+  transform: none;
 }
 
-.l-header{
-width: 100%;
-position: fixed;
-bottom: 0;
-left: 0;
-z-index: var(--z-fixed);
-background-color: var(--body-color);
-box-shadow: 0 -1px 4px rgba(0, 0, 0, .1);
-transition: .3s;
+.formations p {
+  padding: 0;
 }
 
-/* Nav */
-.nav{
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.lightier {
+  color: #747474;
 }
 
-@media screen and (max-width: 968px){
-  .nav__menu{
-    position: fixed;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    padding: 2rem 1.5rem;
-    background-color: var(--body-color);
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
-    border-radius: 1rem 1rem 0 0;
-    z-index: var(--z-fixed);
-    transition: .3s;
-  }
-}
-
-.nav__logo{
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-}
-
-.nav_logo, .nav__toggle{
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-}
-
-.nav__toggle{
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-
-.nav__item{
-  text-transform: none;
-  text-align: center;
-}
-
-.nav__list{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  gap: 2rem;
-}
-
-.nav__link{
-  display: flex;
-  flex-direction: column;
-  font-size: var(--smaller-font-size);
-  color: var(--text-color-light);
-  font-weight: var(--font-medium);
-}
-
-.nav__link:hover{
-  color: var(--title-color);
-}
-
-.nav__icon{
-  font-size: 1.2rem;
-  margin-bottom: var(--mb-1);
-}
-
-/* Exibição do menu */
-.show-menu{
-  bottom: var(--header-height);
-}
-
-/* Menu link */
-.active-link{
-  color: var(--title-color);
-  }
-
-/* Home */
-.home{
-  position: relative;
-}
-
-.home__container{
-  gap: 3rem;
-}
-
-.home__data{
-  gap: .5rem;
-  text-align: center;
-}
-
-.home__img{
-  width: 250px;
-  height: 250px;
+.channel-list img {
+  width: 70px;
   border-radius: 50%;
-  justify-self: center;
-  margin-bottom: var(--mb-1);
+  border: 1px solid #443e54;
 }
 
-.home__title{
-  font-size: var(--h1-font-size);
+.experiences h3 {
+  padding-top: 1.5rem;
+
 }
 
-.home_profession{
-  font-size: var(--normal-font-size);
-  margin-bottom: var(--mb-1);
-}
-
-.home__address{
-  gap: 1rem;
-}
-
-.home_information{
-  display: flex;
-  align-items: center;
-  font-size: var(--small-font-size);
-}
-
-.home__icon{
-  font-size: 1.2rem;
-  margin-right: .25rem;
-}
-
-/* Social */
-.social__container{
-  grid-template-columns: max-content;
-  gap: 1rem;
-}
-
-.social__link{
-  display: inline-flex;
-  align-items: center;
-  font-size: var(--small-font-size);
-  color: var(--text-color);
-}
-
-.social__link:hover{
-  color: var(--title-color);
-}
-
-.social__icon{
-  font-size: 1.2rem;
-  margin-right: .25rem;
-}
-
-/* Perfil */
-.profile__description{
-  text-align: center;
-}
-
-/* Educação e experiência */
-.education__content,
-.experience__content{
-  display: flex;
-}
-
-.education__time,
-.experience__time{
-  padding-right: 1rem;
-}
-
-.education__rounder,
-.experience__rounder{
-  position: relative;
+.experiences ul , .languages ul{
   display: block;
-  width: 16px;
-  height: 16px;
-  background-color: var(--text-color-light);
-  border-radius: 50%;
-  margin-top: .25rem;
 }
 
-.education__line,
-.experience__line{
-  display: block;
-  width: 2px;
-  height: 100%;
-  background-color: var(--text-color-light);
-  transform: translate(7px, 0);
+.experiences ul li p {
+  text-indent: 20px;
+  font-size: 14px;
 }
 
-.education__data,
-.experience__data{
-  gap: .5rem;
+/* animation */
+main section:nth-child(1) {
+  animation-delay: 0.1s;
 }
 
-.education__title,
-.experience__data{
-  font-size: var(--h3-font-size);
+main section:nth-child(2) {
+  animation-delay: 0.3s;
 }
 
-.education__studies,
-.experience__company{
-  font-size: var(--small-font-size);
-  color: var(--title-color);
+main section:nth-child(3) {
+  animation-delay: 0.6s;
 }
 
-.education__year{
-  font-size: var(--smaller-font-size);
-}
+@keyframes grow {
+  to {
+    transform: scaleX();
+  }
 
-/* Hab e linguagens */
-.skills__content,
-.languages__content{
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.skills__content,
-.languages__content{
-  gap: 0;
-}
-
-.skills__name,
-.languages__name{
-  display: flex;
-  align-items: center;
-  margin-bottom: var(--mb-3);
-}
-
-/* Certificados */
-.certificate__title{
-  font-size: var(--h3-font-size);
-  margin-bottom: var(--mb-1);
-}
-
-/* Interesses */
-.interests__container{
-  grid-template-columns: repeat(3, 1fr);
-  margin-top: var(--mb-2);
-}
-
-.interests__content{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.interests__icon{
-  font-size: 1.5rem;
-  color: var(--text-color-light);
-  margin-bottom: .25rem;
-}
-/* Rolar a tela pra cima */
-.scrolltop{
-  position: fixed;
-  right: 1rem;
-  bottom: -20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: .3rem;
-  background-color: var(--container-color-alt);
-  border-radius: .4rem;
-  z-index: var(--z-tooltip);
-  transition: .4s;
-  visibility: hidden;
-}
-
-.scrolltop__icon{
-  font-size: 1.2rem;
-  color: var(--text-color);
-}
-
-.show-scroll{
-  visibility: visible;
-  bottom: 5rem;
-}
-
-/* Media Queries */
-/* Dispositivos pequenos - menu de duas colunas */
-@media screen and (max-width: 320px){
-  .nav__list{
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem .5rem;
+  from {
+    transform: scaleX(0);
   }
 }
 
-/* Modificações para tamanhos largos */
-@media screen and (min-width: 968px){
-  body{
-    margin: 3rem 0;
+@keyframes fromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
   }
 
-  .bd-container{
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .l-header,
-    .scrolltop{
-      display: none;
-  }
-
-  .resume{
-    display: grid;
-    grid-template-columns: .5fr 1fr;
-    background-color: var(--container-color);
-    box-shadow: 0 0 8px rgba(13, 12, 12, .15);
-  }
-
-  .resume__left{
-    background-color: var(--container-color-alt);
-  }
-
-  .resume__left,
-  .resume__right{
-    padding: 0 1.5rem;
-  }
-
-  .generate-pdf{
-    display: inline-block;
-  }
-
-  .section-title,
-  .profile__description{
-    text-align: initial;
-  }
-
-  .home__container{
-    gap: 1.5rem;
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
-
