--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ section ul {
   display: flex;
   list-style: none;
   gap: 16px;
-  margin-top: 8px;
+  margin-top: 10px;
 }
 
 section div {
@@ -139,15 +139,32 @@ section ul li:hover {
   display: block;
 }
 
-.about div h1 a{
-  color: white;
-  text-decoration: none;
+.flags {
+  max-width: 800px;
+  width: 90%;
+  gap: 24px;
+  margin: 32px auto;
+  text-align: right;
 }
 
-.experiences ul li p {
-  text-indent: 20px;
-  font-size: 14px;
+.flags img {
+  width: 40px;
+  border-radius: 40%;
 }
+
+.flags a img {
+  transition: transform 0.5s;
+}
+
+.flags a img:hover {
+  transform: scale(1.1);
+}
+
+section div ul li p {
+  text-indent: 14px;
+}
+
+
 
 /* animation */
 main section:nth-child(1) {
